@@ -23,6 +23,7 @@ Version 1.0.9
     Bug #25625 Crashes when calling with CommandType set to StoredProcedure 
     Bug #25651 SELECT does not work properly when WHERE contains UTF-8 characters 
     Bug #25726 MySqlConnection throws NullReferenceException and ArgumentNullException 
+    Bug #25609 MySqlDataAdapter.FillSchema 
 
     Other changes
     -------------
